# Project-Infinity1

./: .dockerignore  .env.docker  .env.example  .gitattributes  .gitignore  .gitlab-ci-advanced.yml  .phase17-extract.txt  .vercelignore  ACCEPTANCE.md  AGENTS.md  AI_COLLABORATOR_PROVENANCE_CHARTER.md  ARCHITECTURE.md  CHANGELOG.md  CODEX.md  CONTINUITY_SUBSTRATE_SPEC.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  Dockerfile.frontend  Eproject-infi.runtimeonlineaaes_traces.jsonl  FUTURE.md  HUMAN_AI_CO_COLLABORATION_CHARTER.md  LEGIBILITY_SCROLL.md  LICENSE  MANIFEST.in  META_ARCHITECT_LAWBOOK.md  MILESTONES.md  Makefile  Mythic-ai-nextjs-v1.docx  ONBOARDING.md  Project Infi — The Voss Binding (Λ) Formal Specification.docx  README.machine.md  README.md  README.sigil.md  REPO_LAWBOOK.md  REPO_PROOF_LAW.md  SECURITY.md  SUBSTRATE_DIAGRAM.md  aais_terminal.spec  (+33 more)
bindings/rust/: Cargo.toml
civilization-stack/: Cargo.toml
civilization-stack/src/: interop.rs  jsonl_store.rs  lib.rs  main.rs  model.rs  projections.rs  query.rs  reconstruct.rs  storage.rs  types.rs
darz-kernel/: Cargo.toml  README.md
darz-kernel/src/: darz_contract.rs  darz_orchestrator.rs  hash.rs  k32.rs  ledger.rs  lib.rs  payload.rs  policy.rs  query.rs  scil.rs  scol.rs  storage.rs  storage_sled.rs  storage_sqlite.rs  types.rs  validator.rs
darz-kernel/tests/: aais_pipeline.rs  continuity_kernel.rs  determinism.rs  policy_monotonicity.rs  replay.rs  totality.rs  voss_runtime.rs
darz-kernel/theories/: Axes.v  K32.v  Kernel.v  Properties.v  Types.v
docs/: CORI_ALPHA_CORE_LOOP.md  CORI_ALPHA_EVIDENCE_FRAMEWORK.md  CORI_ALPHA_LAUNCH_CHECKLIST.md  CORI_ALPHA_OBSERVABILITY_DASHBOARD.md  CORI_ALPHA_STEWARDSHIP_RUNTIME_ALIGNMENT.md  FORGE_WARDEN_COLLABORATION_ENFORCEMENT.md  GITHUB.md  IMPLEMENTATION_STATUS.md  README.md  TRUST_BUNDLE_SPEC.md  URG_CLOUD_PLATFORM.md  cloud-forge-backlog.md  cloud-forge-domain-slice-layout.md  cloud-forge-governed-accelerator-program.md  cloud-forge-tempering-job.md  constitutional-runtime.md  forge-backlog.md  forge-build-program.md  forge-cloud-output-contract.md  forge-iso-design.md  forge-lineage-contract.md  forge-platform-gate.md  forge-platform-program.md  forge-risk-register.md  forge-rootfs-backend-contract.md  forge-shippable-gate.md  forge-substrate-contract.md  forge-universal-substrate-program.md  index.md  nova-law-kernel-v1.0.md  openapi_governed_mission.yaml  pyproject.toml  ra_cos_demo.md
docs/_archive/: README.md
docs/_future/: README.md
docs/aaes-os/: README.md
docs/agentic/: README.md
docs/architecture/: AAES_OS_UCR_MAPPING.md  COLLAPSED_STACK_V0.md  TRI_CORE_NEXUS_DECOUPLING.md  unified-civilization-stack-v1.0.md
docs/audit/: AAIS_FLAGSHIP_AUDIT_2026-06-05.md  AAIS_FLAGSHIP_AUDIT_2026-06-06.md  AAIS_PROJECT_CLEANUP_AUDIT.md  AAIS_STATUS_AUDIT.md  COMPONENT_AUDIT.md  DESKTOP_SYSTEM_DOCUMENTATION_AUDIT.md  DOCUMENT_CORPUS_SUBSYSTEM_AUDIT.md  FOLDER_DOCUMENTATION_AUDIT.md  INFINITY_PILOT_GA_SIGNOFF.md  LOGBOOK.md  OTEM_SUBSTRATE_INTEGRATION_MAP_2026-06-07.md  OWNERSHIP_PASS.md  PILOT_GA_HARDENING_CHECKLIST.md  PRODUCTION_GA_SIGNOFF_2026-06-06.md  READINESS_82_TO_91_FIX_REPORT.md  README.md  REPO_HYGIENE_MANIFEST.json  ROOT_STRUCTURE_AUDIT.md  SEAM_STRESS_OPERATOR_SIGNOFF_2026-06-06.md  SEAM_STRESS_RUN_2026-06-06.md  WAVE5_GOVERNANCE_CLOSURE_PLAN.md
docs/baseline/: INFINITY_PILOT_BASELINE_CHECKLIST.md
docs/baseline-debt/: infinity-rebase-plan.md  local-ollama-architect-agent.md
docs/civilization-os/: DOMAIN_BINDING_MYTHAR_SRE.md  IDENTITY.md  ORGAN_LEDGER.md  README.md  SOURCE_OF_TRUTH.md  VERTICAL_SLICE.md
docs/community/: HELP_WANTED_HUB.md
docs/continuity-os/: constitution-scroll.md  developer-guide.md
docs/continuity-sdk/: CONSTITUTION.md  api-reference.md  index.html  intro.md  lawful-llm-adapter.md  mission-005.md  mvcd-demo.md
docs/contracts/: AAES_GOVERNED_MEMORY_TRI_STRATA.md  AAES_OS_ARCHITECTURE_V1.md  AAES_OS_INTERFACE_V1.md  AAES_OS_V1_FORMAL_SPEC.md  AAIS_ADAPTIVE_GOVERNANCE.md  AAIS_ALT4_RUNTIME_OPERATOR_GUIDE.md  AAIS_CAPABILITY_MODULE_SPEC.md  AAIS_CHAT_ROUTING_CONTRACT.md  AAIS_CODEX_CURSOR_NAMING_PROTOCOL.md  AAIS_COGNITIVE_BRIDGE_RUNTIME_LAW.md  AAIS_DOC_PROTOCOL.md  AAIS_IMMUNE_PROTOCOL.md  AAIS_LIBRARY_ADMISSION_PROTOCOL.md  AAIS_META_LINGUISTIC_GOVERNANCE.md  AAIS_MODULE_GOVERNANCE_PROTOCOL.md  AAIS_REASONING_PROFILE.md  AAIS_RECONSTRUCTION_HARNESS.md  AAIS_SSP_PROTOCOL.md  AAIS_SUBSYSTEM_GENOME.md  AAIS_SUBSYSTEM_MUTATION_PATH.md  AAIS_TRACING_PROTOCOL.md  AAIS_UL_DOCTRINE.md  ARIS_RUNTIME_CONTRACT.md  ARIS_STANDALONE_ADMISSION_SPEC.md  AUTHORITY_MASK_SPEC.md  (+108 more)
fos-kernel/: Cargo.toml
runtime_law_spine/: README.md  pyproject.toml
(+7547 files in other folders)
