[package]
name = "civilization-stack"
version = "0.1.0"
edition = "2021"
description = "FOS continuity kernel — threads, events, lineage, reconstruction"
license = "MIT OR Apache-2.0"

[lib]
name = "civilization_stack"
path = "src/lib.rs"

[[bin]]
name = "civilization-stack-demo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
