[package]
name = "darz-kernel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "DAR-Z sovereign deterministic execution kernel."

[lib]
name = "darz_kernel"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
civilization-stack = { path = "../civilization-stack" }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
