[package]
name = "darz-kernel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "DAR-Z sovereign deterministic execution kernel."

[lib]
name = "darz_kernel"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = { version = "0.34", optional = true }
uuid = { version = "1", features = ["serde", "v4"] }

[features]
default = []
sled-store = ["dep:sled"]
sqlite-store = ["dep:rusqlite"]
