[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aais"
version = "1.26.1"
description = "Cross-platform launcher and runtime shell for AAIS."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
  "a2wsgi",
  "anthropic>=0.52.0",
  "celery[redis]>=5.4.0",
  "chromadb>=0.5.5",
  "fastapi>=0.115.0",
  "flask-cors>=4.0.0",
  "flask>=3.0.0",
  "networkx>=3.0.0",
  "numpy>=1.26.0",
  "openai>=1.40.0",
  "pydantic>=2.8.2",
  "Pillow>=12.2.0",
  "python-dotenv>=1.0.1",
  "PyJWT>=2.8.0",
  "boto3>=1.34.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "requests>=2.32.0",
  "scipy>=1.13.0",
  "sympy>=1.13.0",
  "uvicorn[standard]>=0.30.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
desktop = [
  "pyinstaller>=6.0.0",
  "pywebview>=5.0.0",
]

[project.scripts]
aais = "aais.launcher:main"
lab = "lab.cli:main"

[tool.setuptools.packages.find]
include = ["aais*", "app*", "src*", "scorpion*", "forge*", "ai_factory*", "lab*", "mechanic*", "slingshot*", "triangulation*", "tools*"]

[tool.setuptools.package-data]
app = ["static/*", "static/**/*"]
