[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "runtime-law-spine"
version = "1.0.0"
description = "Runtime Law Spine — measured boot and law envelope facade"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime_law_spine*"]
