[package]
name = "aaes-cas-evidence"
version = "0.1.0"
edition = "2021"
description = "Cross-language CAS receipt evidence harness (Rust)"

[[bin]]
name = "aaes-cas-evidence"
path = "src/evidence_harness.rs"

[lib]
name = "aaes_cas"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
serde_json = "1"
